unpackaged/main/default/objects/DriftData__Drift_Conversation__c/DriftData__Drift_Conversation__c.object-meta.xml
<CustomObject>
    <label>Drift Conversation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drift Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>