unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Account__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Account associated with the Drift conversation.</description>
    <inlineHelpText>Salesforce Account associated with the Drift conversation.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Drift Conversations</relationshipLabel>
    <relationshipName>Drift_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>