unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Contact__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Contact associated with the Drift conversation.</description>
    <inlineHelpText>Salesforce Contact associated with the Drift conversation.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Drift Conversations</relationshipLabel>
    <relationshipName>Drift_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>