unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Conversation_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Conversation_Close_Time__c</fullName>
    <description>Date and time when the Drift conversation closed.</description>
    <inlineHelpText>Date and time when the Drift conversation closed.</inlineHelpText>
    <label>Conversation Close Time</label>
    <type>DateTime</type>
</CustomField>