unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Conversation_Source_Full_URL__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Conversation_Source_Full_URL__c</fullName>
    <description>The Full URL for the page where the Drift conversation was initiated.</description>
    <inlineHelpText>The Full URL for the page where the Drift conversation was initiated.</inlineHelpText>
    <label>Conversation Source Full URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>