unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Conversation_Source_URL_Path__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Conversation_Source_URL_Path__c</fullName>
    <description>The URL Path for the page where the Drift conversation was initiated.</description>
    <inlineHelpText>The URL Path for the page where the Drift conversation was initiated.</inlineHelpText>
    <label>Conversation Source URL Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>