unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Conversation_URL__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Conversation_URL__c</fullName>
    <description>URL to view conversation in Drift.</description>
    <formula>HYPERLINK (&quot;https://app.drift.com/inboxes/&quot;&amp; TEXT(DriftData__Inbox_ID__c) &amp;&quot;/conversations/&quot; &amp; TEXT(DriftData__Conversation_ID__c),TEXT(DATEVALUE(DriftData__Conversation_Start_Time__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>URL to view conversation in Drift.</inlineHelpText>
    <label>Drift Conversation Link</label>
    <type>Text</type>
</CustomField>