unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__CQL_Score__c.field-meta.xml
<CustomField>
    <fullName>DriftData__CQL_Score__c</fullName>
    <description>Conversation Qualified Lead (CQL) score applied to the contact in the Drift conversation. Values between [-1, 3] correspond to the number of CQL lightning bolts. -1 means Disqualified, 0 means No score.</description>
    <inlineHelpText>Conversation Qualified Lead (CQL) score applied to the contact in the Drift conversation. Values between [-1, 3] correspond to the number of CQL lightning bolts. -1 means Disqualified, 0 means No score.</inlineHelpText>
    <label>CQL Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>