unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Has_Bot__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Has_Bot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a Drift Bot sent a message during the Drift conversation.</description>
    <inlineHelpText>True if a Drift Bot sent a message during the Drift conversation.</inlineHelpText>
    <label>Has Bot</label>
    <type>Checkbox</type>
</CustomField>