unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Has_Site_Visitor__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Has_Site_Visitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a Site Visitor sent a message during the Drift conversation.</description>
    <inlineHelpText>True if a Site Visitor sent a message during the Drift conversation.</inlineHelpText>
    <label>Has Site Visitor</label>
    <type>Checkbox</type>
</CustomField>