unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Influenced_Look_Back_Period_fx__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Influenced_Look_Back_Period_fx__c</fullName>
    <description>Maximum number of days between first Drift conversation and Opportunity creation date to consider an opportunity influenced by Drift. Field is used in Drift revenue reports. The default period can be changed in Setup &gt; Custom Settings &gt; Drift Settings.</description>
    <formula>IF($Setup.DriftData__Drift_Settings__c.DriftData__Lookback_Days__c &gt; 0, $Setup.DriftData__Drift_Settings__c.DriftData__Lookback_Days__c, 180)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Maximum number of days between first Drift conversation and Opportunity creation date to consider an opportunity influenced by Drift. Field is used in Drift revenue reports. The default period can be changed in Setup &gt; Custom Settings &gt; Drift Settings.</inlineHelpText>
    <label>Influenced Look-Back Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>