unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Lead__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Lead associated with the Drift conversation.</description>
    <inlineHelpText>Salesforce Lead associated with the Drift conversation.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Drift Conversations</relationshipLabel>
    <relationshipName>Drift_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>