unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Meeting_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if a meeting was booked during the Drift conversation.</description>
    <inlineHelpText>True if a meeting was booked during the Drift conversation.</inlineHelpText>
    <label>Meeting Booked</label>
    <type>Checkbox</type>
</CustomField>