unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Meeting_Owner__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Meeting_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Teammate whom the meeting was booked with.</description>
    <inlineHelpText>Teammate whom the meeting was booked with.</inlineHelpText>
    <label>Meeting Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Drift_Conversations1</relationshipName>
    <type>Lookup</type>
</CustomField>