unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Meeting_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Meeting_Start_Time__c</fullName>
    <description>Date and time of the scheduled meeting.</description>
    <inlineHelpText>Date and time of the scheduled meeting.</inlineHelpText>
    <label>Meeting Start Time</label>
    <type>DateTime</type>
</CustomField>