unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Playbook_ID__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Playbook_ID__c</fullName>
    <description>Drift&#39;s playbook ID.</description>
    <inlineHelpText>Drift&#39;s playbook ID.</inlineHelpText>
    <label>Playbook ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>