unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Playbook_Name__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Playbook_Name__c</fullName>
    <description>Drift&#39;s playbook name.</description>
    <inlineHelpText>Drift&#39;s playbook name.</inlineHelpText>
    <label>Playbook Name</label>
    <type>TextArea</type>
</CustomField>