unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Playbook_Name_Formatted__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Playbook_Name_Formatted__c</fullName>
    <description>A lookup of the Drift Conversation_Playbook Name field which replaces the null (-) value with “[No Playbook Associated]” to add more context to reports and dashboards.</description>
    <formula>IF(ISBLANK(DriftData__Playbook_Name__c), &quot;[No Playbook Associated]&quot;, DriftData__Playbook_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A lookup of the Drift Conversation_Playbook Name field which replaces the null (-) value with “[No Playbook Associated]” to add more context to reports and dashboards.</inlineHelpText>
    <label>Playbook Name (Reports Only)</label>
    <type>Text</type>
</CustomField>