unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Sourced__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if Salesforce Lead or Contact associated with the Drift conversation was created by Drift.</description>
    <inlineHelpText>True if Salesforce Lead or Contact associated with the Drift conversation was created by Drift.</inlineHelpText>
    <label>Sourced</label>
    <type>Checkbox</type>
</CustomField>