unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Teammate__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Teammate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Drift Teammate who first responded to the Drift conversation</description>
    <inlineHelpText>Drift Teammate who first responded to the Drift conversation</inlineHelpText>
    <label>Teammate (First)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Drift_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>