unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Teammate_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Teammate_Message_Count__c</fullName>
    <description>Number of messages sent by Drift teammate(s).</description>
    <inlineHelpText>Number of messages sent by Drift teammate(s).</inlineHelpText>
    <label>Teammate Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>