unpackaged/main/default/objects/DriftData__Drift_Conversation__c/fields/DriftData__Teammate_Name_Formated__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Teammate_Name_Formated__c</fullName>
    <description>A lookup of the Drift Conversation_Teammate field which replaces the null (-) value with “Bot Only” to add more context to reports and dashboards.</description>
    <formula>IF(ISBLANK(DriftData__Teammate__r.FirstName +  DriftData__Teammate__r.LastName), &quot;Bot Only&quot;, DriftData__Teammate__r.FirstName + &quot; &quot; +  DriftData__Teammate__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A lookup of the Drift Conversation_Teammate field which replaces the null (-) value with “Bot Only” to add more context to reports and dashboards.</inlineHelpText>
    <label>Teammate (First) (Reports Only)</label>
    <type>Text</type>
</CustomField>